--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "prefix": "a!",
-    "token": "NjkxMDY5NDU2MDE2NzM2MjY2.XncMhw.B0noXFM8z-hWZJIBtL8v7kVuVdI",
-    "ownerid": "618633182241357834",
+    "token": "",
+    "ownerid": "",
     "host": "http://astrgdps.000webhostapp.com/database",
     "ratechannel": "691138001857806337",
     "emotes": {
